--- a/Kotlin/BOJSteps/BojStep/app/build.gradle
+++ b/Kotlin/BOJSteps/BojStep/app/build.gradle
@@ -33,6 +33,11 @@ android {
 
 dependencies {
 
+    implementation 'com.jakewharton.rxbinding4:rxbinding:4.0.0'
+    implementation("io.reactivex.rxjava3:rxkotlin:3.0.1")
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
