--- a/Kotlin/BOJSteps/BojStep/app/src/main/AndroidManifest.xml
+++ b/Kotlin/BOJSteps/BojStep/app/src/main/AndroidManifest.xml
@@ -14,6 +14,13 @@
         android:theme="@style/Theme.BojStep"
         tools:targetApi="31">
         <activity
+            android:name=".RxActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".SecondActivity"
             android:exported="false">
             <meta-data
