--- a/Kotlin/BOJSteps/BojStep/app/build.gradle
+++ b/Kotlin/BOJSteps/BojStep/app/build.gradle
@@ -33,6 +33,9 @@ android {
 
 dependencies {
 
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+
     implementation 'com.jakewharton.rxbinding4:rxbinding:4.0.0'
     implementation("io.reactivex.rxjava3:rxkotlin:3.0.1")
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
