브로드 캐스트 활용 언어 변경 감지

--- a/Kotlin/BOJSteps/BojStep/app/src/main/AndroidManifest.xml
+++ b/Kotlin/BOJSteps/BojStep/app/src/main/AndroidManifest.xml
@@ -43,6 +43,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- 브로드캐스트 리시버 정의 -->
+        <receiver
+            android:name=".LocaleChangedReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
