--- a/Kotlin/BOJSteps/BojStep/app/src/main/AndroidManifest.xml
+++ b/Kotlin/BOJSteps/BojStep/app/src/main/AndroidManifest.xml
@@ -49,8 +49,7 @@
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
-                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
+                <action android:name="com.sycompany.bojstep.settingbroadcast" />
             </intent-filter>
         </receiver>
     </application>
